Version 3.6.0, August 3, 2020

The Interning Checker supports method annotations @EqualsMethod and
@CompareToMethod.  Place them on methods like equals(), compareTo(), and
compare() to permit certain uses of == on non-interned values.

Added an overloaded version of NullnessUtil.castNonNull that takes an error message.

Implementation details:

commonAssignmentCheck() now takes an additional argument.  Type system
authors must update their overriding implementations.

---------------------------------------------------------------------------

Version 3.5.0, July 1, 2020

Use "allcheckers:" instead of "all:" as a prefix in a warning suppression string.
Writing `@SuppressWarnings("allcheckers")` means the same thing as
`@SuppressWarnings("all")`, unless the `-ArequirePrefixInWarningSuppressions`
command-line argument is supplied.  See the manual for details.

It is no longer necessary to pass -Astubs=checker.jar/javadoc.astub when
compiling a program that uses Javadoc classes.

Renamed command-line arguments:
 * -AshowSuppressWarningKeys to -AshowSuppressWarningsStrings

The Signature Checker no longer considers Java keywords to be identifiers.
Renamed Signature Checker annotations:
  @BinaryNameInUnnamedPackage => @BinaryNameWithoutPackage
  @FieldDescriptorForPrimitiveOrArrayInUnnamedPackage => @FieldDescriptorWithoutPackage
  @IdentifierOrArray => @ArrayWithoutPackage
Added new Signature Checker annotations:
  @BinaryNameOrPrimitiveType
  @DotSeparatedIdentifiersOrPrimitiveType
  #IdentifierOrPrimitiveType

The Nullness Checker now treats `System.getProperty()` soundly.  Use
`-Alint=permitClearProperty` to disable special treatment of
`System.getProperty()` and to permit undefining built-in system properties.

Class qualifier parameters:  When a generic class represents a collection,
a user can write a type qualifier on the type argument, as in
`List<@Tainted Character>` versus `List<@Untainted Character>`.  When a