@@ -789,6 +789,10 @@ See Section~\ref{creating-debugging-options-output-args}.
 Miscellaneous debugging options; see Section~\ref{creating-debugging-options-misc}.
 
 \item
+ \<-Aversion>
+Print the Checker Framework version.
+
+\item
  \<-AprintGitProperties>
 Print information about the git repository from which the Checker Framework
 was compiled.
